[package]
name = "exchain"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0.125", features = ["derive"] }
